RESOLVED FIXED283467
[WebGPU] Validation layer reports an error when using shared memory textures
https://bugs.webkit.org/show_bug.cgi?id=283467
Summary [WebGPU] Validation layer reports an error when using shared memory textures
Mike Wyrzykowski
Reported 2024-11-20 21:54:15 PST
[WebGPU] Validation layer reports an error on Intel GPUs when using shared memory textures
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-20 21:56:16 PST
Mike Wyrzykowski
Comment 2 2024-11-20 22:00:45 PST
EWS
Comment 3 2024-12-04 16:12:58 PST
Committed 287372@main (ce3d0fe96a04): <https://commits.webkit.org/287372@main> Reviewed commits have been landed. Closing PR #36935 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.