[WebGPU] Validation layer reports an error when using shared memory textures https://bugs.webkit.org/show_bug.cgi?id=283467 rdar://140323587

Reviewed by NOBODY (OOPS!).

Ensure ioSurface backed MTLTextures are allocated with MTLStorageModeManaged
as this is required on some Macs and MTLStorageModeManaged is always supported
on macOS.

Also align Intel graphics allocations with AMD, otherwise we see
asserts with validation enabled on Intel despite everything
seeming to work just fine on all Intel chips we support.

* Source/WebGPU/WebGPU/Device.h:
(WebGPU::Device::hasUnifiedMemory const):
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
Only create IOSurface backed textures with MTLStorageModeManaged, except
when unified memory and where WebGPU is enabled by default.